fix quality test sonarqube